@@ -7654,6 +7654,7 @@ cb_emit_accept_name (cb_tree var, cb_tree name)
 			if (cb_std_define != CB_STD_IBM
 			 && cb_std_define != CB_STD_MVS
 			 && cb_std_define != CB_STD_MF
+			 && cb_std_define != CB_STD_GCOS
 			 && !cb_relaxed_syntax_checks) {
 				cb_warning_x (COBC_WARN_FILLER, name,
 					_("'%s' is not defined in SPECIAL-NAMES"), CB_NAME (name));
@@ -8822,6 +8823,7 @@ cb_build_display_name (cb_tree x)
 		if (cb_std_define != CB_STD_IBM
 		 && cb_std_define != CB_STD_MVS
 		 && cb_std_define != CB_STD_MF
+		 && cb_std_define != CB_STD_GCOS
 		 && !cb_relaxed_syntax_checks) {
 		 	/* ... especially as this is not allowed and therefore should raise an error... */
 			cb_warning_x (COBC_WARN_FILLER, x,
