@@ -1,3 +1,8 @@
+2022-02-04  David Declerck <david.declerck@ocamlpro.com>
+
+	* parser.y, reserved.c, scanner.l, typeck.c: Add GCOS-specific mnemonics
+	  ALTERNATE-CONSOLE, ALTERNATE CONSOLE and TERMINAL
+
 2022-05-15  Simon Sobisch <simonsobisch@gnu.org>
 
 	* parser.y (transform_body): add full features of INSPECT CONVERTING
